--- a/bin/Makefile
+++ b/bin/Makefile
@@ -6,7 +6,10 @@ CPPFLAG=-I${INCDIR} -std=c++11 -llapacke -lblas
 
 default:run
 
-run:main1 main2 Test1_NoHom Test1_Hom Test1_Hom_Final_RE Test1_NoHom_Final_RE
+run:main1 main2 Test1_NoHom Test2_NoHom Test1_Hom Test1_Hom_Final_RE Test1_NoHom_Final_RE Test2_NoHom_Final_RE
+
+Test2_NoHom_Final_RE:${MAIN_TEST}Test2_NoHom_Final_RE.cpp ${INCDIR}*.h ${SRC}*.cpp
+	g++ ${^}  -g -o ${@} ${CPPFLAG}
 
 Test1_NoHom_Final_RE:${MAIN_TEST}Test1_NoHom_Final_RE.cpp ${INCDIR}*.h ${SRC}*.cpp
 	g++ ${^}  -g -o ${@} ${CPPFLAG}
@@ -15,6 +18,9 @@ Test1_Hom_Final_RE:${MAIN_TEST}Test1_Hom_Final_RE.cpp ${INCDIR}*.h ${SRC}*.cpp
 	g++ ${^}  -g -o ${@} ${CPPFLAG}
 
 Test1_Hom:${MAIN_TEST}Test1_Hom.cpp ${INCDIR}*.h ${SRC}*.cpp
+	g++ ${^}  -g -o ${@} ${CPPFLAG}
+
+Test2_NoHom:${MAIN_TEST}Test2_NoHom.cpp ${INCDIR}*.h ${SRC}*.cpp
 	g++ ${^}  -g -o ${@} ${CPPFLAG}
 
 Test1_NoHom:${MAIN_TEST}Test1_NoHom.cpp ${INCDIR}*.h ${SRC}*.cpp
@@ -29,4 +35,4 @@ main2:${MAIN_TEST}main2.cpp ${INCDIR}*.h ${SRC}*.cpp
 .PHONY:clean
 
 clean:
-	-rm main1 main2 -f *.out *.m
+	-rm main1 main2 Test1_NoHom Test2_NoHom Test1_Hom Test1_Hom_Final_RE Test1_NoHom_Final_RE Test2_NoHom_Final_RE -f *.out *.m
